--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
     background-position: center;
     background-size: auto;
     background-color: rgba(0, 0, 0, .9);
-    animation: transitionMain 5s ease-in-out forwards;
+    animation: transitionMain 8s ease-in-out forwards;
 }
 
 .button-volume {
@@ -41,7 +41,7 @@ body {
     align-items: center;
     display: flex;
     position: fixed;
-    z-index: 999;
+    z-index: 990;
     right: 40px;
     border: none;
 }
@@ -59,6 +59,147 @@ body {
     font-size: 60px;
     color: white;
 }
+
+.score {
+    z-index: 997;
+    position: absolute;
+    right: 0px;
+    width: 0px;
+    visibility: hidden;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .6);
+    color: white;
+    transition: 1s ease-in-out 0s;
+    overflow: hidden;
+    padding: 40px 10px;
+    text-align: center;
+    opacity: 0;
+}
+
+.score-panel,
+.score-players {
+    text-align: center;
+    justify-content: space-between;
+    display: flex;
+    padding: 20px 10px;
+    transition: 2.8s;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
+
+#toggle {
+    display: none;
+}
+
+.checkbox {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    background-color: #FF161F;
+    border-radius: 50%;
+    bottom: 40px;
+    right: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 998;
+    transition: 600ms ease-in-out 0s;
+    box-shadow: darkgray;
+}
+
+.checkbox span {
+    color: white;
+    font-size: 40px;
+    transition: 0.5s ease-in-out 0s;
+    cursor: pointer;
+}
+
+/*
+.checkbox .trace {
+    width: 50px;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    border-radius: 4px;
+    transition: 0.5s ease-in-out 0s;
+}
+
+.checkbox .trace:nth-child(1) {
+    top: 20px;
+    transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(2) {
+    top: 40px;
+    transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(3) {
+    top: 60px;
+    transform: rotate(0);
+}
+
+#toggle:checked+.checkbox .trace:nth-child(1) {
+    transform: rotate(45deg);
+    top: 47px;
+}
+
+#toggle:checked+.checkbox .trace:nth-child(2) {
+    transform: translate(-10px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+#toggle:checked+.checkbox .trace:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 48px;
+}
+*/
+#toggle:checked~.score {
+    width: 300px;
+    visibility: visible;
+    position: fixed;
+    opacity: 1;
+}
+
+.cont {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: 40px;
+    position: absolute;
+    left: 40px;
+    bottom: 40px;
+    color: #FF161F;
+    background-color: white;
+    border-radius: 50%;
+    border: solid black 2px;
+    font-size: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -87,9 +228,72 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
-    transition: transitionGame 2s ease-in-out forwards;
+    animation: transitionGame 9s ease-in-out forwards;
     /*border: solid red 2px;*/
     /* perspectiva do usuario no eixo z, quanto maior, maior o efeito da perspectiva */
+}
+
+.winner {
+    position: absolute;
+    min-height: 500px;
+    width: 90%;
+    visibility: hidden;
+    margin: 10px auto;
+    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-image: url(/assets/img/win.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 990;
+    transition: 0.5s ease-in-out 0s;
+}
+
+.winner h1 {
+    width: 100%;
+    padding: 20px 0px;
+    color: #FF161F;
+    background-color: rgba(0, 0, 0, .8);
+    font-weight: 900;
+}
+
+.winner-input {
+    width: 70%;
+    margin: 10px auto;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #FF161F;
+    background-color: rgba(255, 255, 255, 0.9);
+    font-size: 22px;
+}
+
+.winner-input input {
+    margin: 10px;
+    font-size: 22px;
+    padding-left: 5px;
+    text-transform: uppercase;
+
+}
+
+.winner-input button {
+    cursor: pointer;
+    padding: 10px 20px;
+    background-color: #FF161F;
+    color: white;
+    font-size: 22px;
+    text-transform: uppercase;
+    border: transparent;
+    border-radius: 60px;
+    box-shadow: 0px 0px 5px black;
+}
+
+.winner-input button:hover {
+    background-color: black;
 }
 
 .card {
@@ -157,7 +361,10 @@ h1 {
 @keyframes transitionGame {
     0% {
         opacity: 0;
-        transform: translateY(-500px);
+    }
+
+    65% {
+        opacity: 0;
     }
 
     100% {
