Add Favicon, Efeito sonoro virada de carta, ajuste CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,4 +407,11 @@ h1 {
     .score {
         padding-top: 130px;
     }
+
+    #toggle:checked~.score {
+        width: 80%;
+        visibility: visible;
+        position: absolute;
+        opacity: 1;
+    }
 }
