--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,8 +259,6 @@ h1 {
 }
 
 .card {
-    /* height: calc(33.333% - 10px);
-    width: calc(16% - 10px);*/
     width: 170px;
     height: 170px;
     margin: 5px;
@@ -269,9 +267,7 @@ h1 {
     cursor: pointer;
     transform: scale(1);
     transform-style: preserve-3d;
-    /* adiciona perspectiva 3d, para que o elemento nao fique achatada no plano */
-    transition: transform .9s;
-    /* adiciona efeito de movimento ao flip do card */
+    transition: transform 1.2s;
 }
 
 .card:active {
@@ -288,16 +284,14 @@ h1 {
     border-radius: 5px;
     background: rgba(235, 204, 204, 0.685);
     backface-visibility: hidden;
-    /* todo elemento tem uma frente e um verso (ao contrario, como um espelho.) essa propriedade retira o verso */
+    /* Retira o verso do Elemento */
 }
 
 .card-front {
     transform: rotateY(180deg);
-    /* antes, o verso aparecia transparente, pois ambas as imagens tem position absolute, ao girar no eixo Y, elas ficaram com os versos virados */
 }
 
-/* flip card animation */
-
+/* Card animation Flip - ao adicionar a classe flip rodar a carta */
 .card.flip {
     transform: rotateY(180deg);
     transition: 0.4s;
@@ -312,7 +306,6 @@ h1 {
     50% {
         background-color: rgba(0, 0, 0, 0.9);
     }
-
 
     100% {
         background-color: rgba(0, 0, 0, 0.0);
@@ -333,7 +326,6 @@ h1 {
     100% {
         opacity: 1;
         transform: translateY(0px);
-
     }
 }
 
